adicionamento do restart always no docker compose
para que o container sempre restart

--- a/cluster/front_samir/docker-compose.yaml
+++ b/cluster/front_samir/docker-compose.yaml
@@ -3,6 +3,7 @@ version: '3.8'
 services:
   web:
     image: moisespompilio/samir_front:1.0.0
+    restart: always
     ports:
       - "8080:8080"
 
